fix(9-component): fix sticking out component

--- a/styles/9-component.css
+++ b/styles/9-component.css
@@ -87,7 +87,7 @@
 }
 
 ._9-component-Element {
-  height: 650px;
+  height: 647px;
   grid-row: span 8;
   background-color: #a0b1bb;
   border-radius: 35px 35px 0px 0px;
